--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-proxy-middleware": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.16",
